fixed dropdown z-index
layering (behind, on top)

--- a/Admin Dashboard/assets/css/style.css
+++ b/Admin Dashboard/assets/css/style.css
@@ -134,6 +134,7 @@ nav ul ul li{
   float: none;
   display: list-item;
   border-bottom: 1px solid rgba(0,0,0,0.3);
+  z-index: 1;
 }
 nav ul ul li a{
   line-height: 50px;
@@ -221,14 +222,14 @@ nav ul ul ul li{
     content: '\f00d';
   }
 }
-.content{
+/* .content{
   z-index: -1;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
   text-align: center;
-}
+} */
 header{
   font-size: 35px;
   font-weight: 600;
@@ -334,4 +335,5 @@ div li span {
 #content {
   display: flex;
   padding: 1rem;
+  position: relative;
 }
